pages/css/mission.css
.transparent-square {
    width: 50%;
    height: 40%;
    background-color: rgba(225,225,225); /* Using rgba with alpha value for transparency */
    border-radius: 10px; /* Rounded edges */
  }
  .top {
    display: flex;
    font-size: 64px;
    font-family: 'Roboto', sans-serif;
    justify-content: flex-start;
    align-items: center;
}

.statement {
  font-size: 40px;
  font-family: 'normal';
  font-weight: lighter;
  color: rgb(75, 75, 75);
  display: flex;
  justify-content: center;
  text-align: center;
  width: 100%; /* Set your desired width */
  padding-top: 30px; /* Adjust the value to shift the text downwards */
}

.growth-statement {
  font-size: 220%;
  font-family: 'normal';
  font-weight: lighter;
  color: rgb(75, 75, 75);
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  align-self: center;
  width: 90%; /* Set your desired width */
  padding-top: 30px; /* Adjust the value to shift the text downwards */
  padding-left: 20px;
}

.steph {
  position: absolute;
  top: 10%;
  right: 0;
  height: calc(100vh - 150px);
}

.growth {
  position: absolute;
  top: 100%;
  left: 40px;
  height: calc(100vh - 50%);
}

.growth-square {
  width: 40%;
  height: 70%;
  background-color: rgba(225, 225, 225, 0.7); /* Using rgba with alpha value for transparency */
  border-radius: 10px; /* Rounded edges */
  position: absolute;
  top: 90%; /* Adjust top or bottom based on your layout */
  right: 2%; /* Positioning the square on the right side */
}

.main{
  height: 170vh;
}

